--- a/x.html
+++ b/x.html
@@ -8,6 +8,6 @@
 <body>
     <h2>Choose an Option</h2>
     <a href="https://wa.me/971521439648" style="display: inline-block; margin: 10px; padding: 10px; background-color: green; color: white; text-decoration: none;">Chat on WhatsApp</a>
-    <a href="https://maplejet.com" style="display: inline-block; margin: 10px; padding: 10px; background-color: blue; color: white; text-decoration: none;">Visit Website</a>
+    <a href="https://maplejet.com" style="display: inline-block; margin: 10px; padding: 10px; background-color: blue; color: white; text-decoration: none;">online chat</a>
 </body>
 </html>
